# DC_Commander

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  architecture.md  build_exe.py  component-diagrams.md  demo_search_performance.py  design-decisions.md  implementation-roadmap.md  modern_commander.py  project-structure.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  file_actions.py  menu_dispatch.py  navigation.py
components/: command_bar.py  config_screen.py  debug_overlay.py  dialogs.py  file_panel.py  find_file_dialog.py  help_overlay.py  menu_screen.py  quick_view_widget.py  status_bar.py  theme_config_dialog.py  theme_selection_menu.py  top_menu_bar.py
coordinators/: __init__.py  config_coordinator.py  dialog_coordinator.py  file_operation_coordinator.py  menu_coordinator.py  panel_coordinator.py
docs/: FILE_EDITOR.md  FILE_VIEWER.md  user-manual.md
examples/: system_info_example.py
features/: __init__.py  advanced_search.py  config_manager.py  config_profiles.py  file_editor.py  file_viewer.py  group_selection.py  quick_search.py  search_cache.py  search_engine.py  search_indexer.py  system_info.py  system_info_screen.py  theme_manager.py  view_modes.py
features/themes/: README.md  midnight_blue.json  modern_dark.json  norton_commander.json  solarized.json
installer/: README.md
installer/linux/: build_appimage.sh  build_appimage.sh.README.md
installer/windows/: dc-commander.nsi
models/: file_item.py
patterns/: command_pattern.py  strategy_pattern.py
plugins/: file_hash_plugin.py  image_preview_plugin.py
repositories/: file_repository.py
services/: async_file_scanner.py  file_service.py  file_service_async.py
src/commands/: __init__.py
src/core/: __init__.py  archive_handler.py  atomic_operations.py  dependency_container.py  error_boundary.py  error_handler.py  error_messages.py  exceptions.py  file_operations.py  file_scanner.py  input_validation.py  optimizations.py  protocols.py  security.py  ui_security.py
src/di/: __init__.py  di_container.py  protocols.py
src/plugins/: __init__.py  action_registry.py  plugin_interface.py  plugin_loader.py  plugin_manager.py
src/utils/: __init__.py  async_file_ops.py  crash_reporter.py  directory_cache.py  encoding.py  file_type_detector.py  formatters.py  logging_config.py  performance_metrics.py  progress_tracker.py
tests/: E2E_TEST_RESULTS.md  QUICK_REFERENCE.md  README.md  README_TESTS.md  TEST_SUITE_SUMMARY.md  TEST_THEME_SYSTEM_REPORT.md  __init__.py  conftest.py  fixtures.py  test_advanced_search.py  test_archive_handler.py  test_archive_security.py  test_async_cancellation.py  test_async_file_ops.py  test_async_file_scanner.py  test_async_integration.py  test_binary_preview.py  test_cache_integration.py  test_command_pattern_comprehensive.py  test_concurrency_fix.py  test_config_manager.py  test_config_screen.py  test_config_screen_fix.py  test_config_system.py  test_crash_reporter.py  test_di_integration.py  test_directory_cache.py  test_e2e_workflows.py  test_error_boundary_integration.py  test_error_dialog.py  test_error_messages.py  test_exe.py  test_file_operations.py  test_file_repository.py  test_file_scanner.py  test_file_service.py  test_file_viewer_fix.py  test_integration.py  test_logging.py  test_menu_integration.py  (+23 more)
tests/characterization/: test_app_integration.py
tests/manual/: windows-gray-keys.md
tests/perf/: README.md  test_bench_large_dir.py
